--- a/src/components/Kickz2Kop.css
+++ b/src/components/Kickz2Kop.css
@@ -1,27 +1,31 @@
 /* Import the google web fonts you want to use */
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500&family=Roboto:wght@300;400&display=swap');
 
 /*Typography
 --------------------------------------------------------------*/
-body,
 button,
+body,
 input,
 select,
 textarea {
   color: #404040;
-  font-family: "Comfortaa", Arial, sans-serif;
-  font-size: 14px;
+  font-family: 'Roboto', sans-serif;
+  font-size: 15px;
   line-height: 1.5;
 }
 
-h1,
+h1 {
+  text-align: center;
+  font-family: 'Raleway', sans-serif;
+}
 h2,
 h3,
 h4,
 h5,
 h6 {
-  font-family: "Patua One", serif;
+  font-family: 'Raleway', sans-serif;
   letter-spacing: 2px;
+  
 }
 
 p {
@@ -36,4 +40,9 @@ strong {
 
 address {
   margin: 0 0 1.5em;
+}
+
+
+.button-btn {
+  align-items: center;
 }
