--- a/src/components/nav/NavBar.css
+++ b/src/components/nav/NavBar.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500&family=Roboto:wght@300;400&display=swap');
+
 .navbar {
   display: flex;
   flex-wrap: nowrap;
@@ -17,5 +19,5 @@
   padding-top: 0;
   padding-bottom: 0;
   font-size: 18px;
-  font-family: "Patua One";
+  font-family: "Roboto";
 }
