--- a/src/components/auth/Login.css
+++ b/src/components/auth/Login.css
@@ -1,6 +1,12 @@
 .h1,
 h1 {
   font-size: 2.5rem;
+  text-align: left;
+}
+
+.form--h1{
+  font-family: 'Raleway', sans-serif;
+  text-align: left;
 }
 
 fieldset {
@@ -52,12 +58,22 @@ fieldset {
   background-position-x: right;
   background-image: url(logo.png);
   z-index: 1;
-  min-height: 25rem;
-  min-width: 45rem;
+  min-height: 29rem;
+  min-width: 51rem;
   background-color: hsla(0, 0%, 100%, 0.4);
   background-blend-mode: overlay;
   background-repeat: no-repeat;
 }
+
+  /* background-position-x: right;
+  background-image: url(logo.png);
+  z-index: 1;
+  min-height: 25rem;
+  min-width: 45rem;
+  background-color: hsla(0, 0%, 100%, 0.4);
+  background-blend-mode: overlay;
+  background-repeat: no-repeat; */
+
 
 .button--close {
   position: relative;
