--- a/src/components/nav/NavBar.css
+++ b/src/components/nav/NavBar.css
@@ -1,23 +1,36 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500&family=Roboto:wght@300;400&display=swap');
 
 .navbar {
+
   display: flex;
   flex-wrap: nowrap;
-  justify-content: left;
-  background-color: rgb(255, 255, 255);
+  justify-content: center;
+  background-color: #ECF2FE;
   padding-top: 0;
   padding-bottom: 0;
-  -webkit-box-shadow: 2px 8px 6px 0px rgba(0, 0, 0, 0.12);
-  box-shadow: 2px 8px 6px 0px rgba(0, 0, 0, 0.08);
+  margin-top: 0;
+
 }
 
 .navbar__item {
   flex-basis: 20%;
   list-style-type: none;
   height: 100px;
-  line-height: 60px;
+  line-height: 100px;
   padding-top: 0;
   padding-bottom: 0;
   font-size: 18px;
   font-family: "Roboto";
+}
+
+.navbar__image{
+  background-position-x: left;
+  background-image: url(http://localhost:3000/images/kickz2kop_logo.svg);
+  z-index: 1;
+  min-height: 2rem;
+  min-width: 10rem;
+  background-repeat: no-repeat;
+  list-style-type: none;
+  margin-right: 4rem;
+  vertical-align: middle;
 }
