--- a/src/components/auth/Login.css
+++ b/src/components/auth/Login.css
@@ -56,7 +56,7 @@ fieldset {
 
 .form--login {
   background-position-x: right;
-  background-image: url(logo.png);
+  background-image: url(./logo.png);
   z-index: 1;
   min-height: 29rem;
   min-width: 51rem;
