--- a/src/components/kickzAdded/KickzAddedForm.css
+++ b/src/components/kickzAdded/KickzAddedForm.css
@@ -35,7 +35,7 @@
     margin: 0.3em auto;
     background-color: cornflowerblue;
     border: none;
-    color: cornsilk;
+    color: #1b284c;
     text-align: center;
     text-decoration: none;
     display: inline-block;
@@ -75,3 +75,12 @@
     text-align: right;
   }
   
+  .extraform{
+    max-width: 29em;
+    padding: 10px;
+    margin: 2em auto;
+    border: 0 none;
+    box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%);
+    border-radius: 5px;
+    background: aliceblue;
+  }
